crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_worker__tests__Sqlite_full_advance_2.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "sanitize_json(&json!({\n    \"version\": advance.version.0, \"outcome\": format!(\"{:?}\", advance.outcome),\n    \"trim_to\": trim_to, \"requested_captured_writes_len\":\n    requested.captured_writes.len(), \"replayed_captured_writes_len\":\n    replay.captured_writes.len(),\n}))"
---
{
  "version": 5,
  "outcome": "Applied",
  "trim_to": null,
  "requested_captured_writes_len": 1,
  "replayed_captured_writes_len": 1
}
