crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_worker__tests__Sqlite_trimmed_to_1_log_3.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "ExecutionLogSanitized::from(log)"
---
{
  "execution_id": "E_00000000000000000000000001",
  "events": [
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "created": {
          "ffqn": "testing:fibo-workflow/workflow.fiboa-concurrent",
          "params": [
            10,
            1
          ],
          "parent": null,
          "scheduled_at": "1970-01-01T00:00:00Z",
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "deployment_id": "Dep_00000000000000000000000000",
          "metadata": {},
          "scheduled_by": null
        }
      },
      "version": 0
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": "paused",
      "version": 1
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "g:1"
          }
        }
      },
      "version": 2
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "g:1",
            "request": {
              "type": "child_execution_request",
              "child_execution_id": "E_00000000000000000000000001.g:1_1",
              "target_ffqn": "testing:fibo/fibo.fibo",
              "params": [
                10
              ],
              "result": {
                "Ok": null
              }
            }
          }
        }
      },
      "version": 3
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "g:1",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": "testing:fibo/fibo.fibo",
            "closing": false
          }
        }
      },
      "version": 4
    }
  ],
  "responses": [],
  "next_version": 5,
  "pending_state": {
    "status": "paused",
    "BlockedByJoinSet": {
      "join_set_id": "g:1",
      "lock_expires_at": "1970-01-01T00:00:00Z",
      "closing": false
    }
  },
  "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
}
