crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_worker__tests__advance_paused_workflow_inner-2.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: replay
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_00000000000000000000000000",
        "version": 2,
        "req": {
          "created_at": "1970-01-01T00:00:00Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_set_create",
                "join_set_id": "g:1"
              }
            }
          }
        }
      }
    },
    {
      "AppendBatchCreateNewExecution": {
        "current_time": "1970-01-01T00:00:00Z",
        "batch": [
          {
            "created_at": "1970-01-01T00:00:00Z",
            "event": {
              "history_event": {
                "event": {
                  "type": "join_set_request",
                  "join_set_id": "g:1",
                  "request": {
                    "type": "child_execution_request",
                    "child_execution_id": "E_00000000000000000000000000.g:1_1",
                    "target_ffqn": "testing:fibo/fibo.fibo",
                    "params": [
                      10
                    ],
                    "result": {
                      "Ok": null
                    }
                  }
                }
              }
            }
          }
        ],
        "execution_id": "E_00000000000000000000000000",
        "version": 3,
        "child_req": [
          {
            "created_at": "1970-01-01T00:00:00Z",
            "execution_id": "E_00000000000000000000000000.g:1_1",
            "ffqn": "testing:fibo/fibo.fibo",
            "params": [
              10
            ],
            "parent": [
              "E_00000000000000000000000000",
              "g:1"
            ],
            "scheduled_at": "1970-01-01T00:00:00Z",
            "component_id": {
              "component_type": "activity",
              "name": "",
              "component_digest": "sha256:f8d5c0c9b1459a6c1e95df5c062b429c7d7e39f89b819536c4cc256fb72fab7a"
            },
            "deployment_id": "Dep_00000000000000000000000000",
            "metadata": {},
            "scheduled_by": null,
            "paused": false
          }
        ],
        "backtraces": []
      }
    },
    {
      "Append": {
        "execution_id": "E_00000000000000000000000000",
        "version": 4,
        "req": {
          "created_at": "1970-01-01T00:00:00Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_next",
                "join_set_id": "g:1",
                "run_expires_at": "1970-01-01T00:00:00Z",
                "requested_ffqn": "testing:fibo/fibo.fibo",
                "closing": false
              }
            }
          }
        }
      }
    }
  ]
}
